# SequenceEditingJEPA

./: .gitignore  AGENTS.md  README.md  env.sh  legacy.md  new-plan.md  pyproject.toml
configs/: fineweb_replace.yaml  igsm_causal_lm.yaml  igsm_mask.yaml  igsm_mask_denoising_lm.yaml  igsm_replace.yaml  lano_causal_lm.yaml  lano_mask.yaml  lano_mask_denoising_lm.yaml  lano_mask_x0.yaml  lano_replace.yaml  lano_replace_x0.yaml  lm1b_mask.yaml  openthoughts_edit.yaml  smoke_lano_mask.yaml
docs/: BACKLOG.md  CURRENT_EXPERIMENTS.md  DENOISING_LITERATURE.md  EXPERIMENT_PLAN.md  GRID5_BACKLOG.md  GRID5_LOG.md  GRID5_PLAN.md  H1_RECIPE_OVERSIGHT.md  PLANNER_ABLATION_NOTES.md  RESULTS.md  RUNBOOK.md  puzzle_jepa_diagnostics_report.tex  sequence_edit_jepa_report.tex
puzzle_jepa/: __init__.py
scripts/: __init__.py  env.sh  make_report_artifacts.py
seq_edit_jepa/: __init__.py
tests/: test_actions.py  test_arc_scaffold.py  test_causal_lm_baseline.py  test_controlled_objects.py  test_corruptors.py  test_delta_jepa_fidelity.py  test_full_denoise.py  test_grid5_sigreg.py  test_grid6_trajectory.py  test_grid_goal_h1_recipe_oversight.py  test_grid_goal_jepa.py  test_grid_goal_next_wave_scripts.py  test_grid_goal_plan_regressions.py  test_grid_goal_remaining_fidelity.py  test_lewm_sudoku.py  test_modeling.py  test_moving_objects.py  test_object_dynamics.py  test_object_dynamics_fidelity.py  test_object_dynamics_remaining_fidelity.py  test_object_dynamics_results.py  test_puzzle_hydra.py  test_puzzle_models.py  test_puzzle_worlds.py  test_stepwise_diagnostics.py  test_tasks.py  (+1 more)
(+617 files in other folders)
