[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seq-edit-jepa"
version = "0.1.0"
description = "Action-conditioned latent world models over sequence-edit trajectories."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "hydra-core",
  "omegaconf",
  "transformers",
  "datasets",
  "accelerate",
]

[tool.setuptools.packages.find]
include = ["seq_edit_jepa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
