[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle-jepa"
version = "0.1.0"
description = "Action-conditioned latent world models for objective puzzle reasoning."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "hydra-core",
  "omegaconf",
  "datasets",
  "matplotlib",
]

[tool.setuptools.packages.find]
include = ["puzzle_jepa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
